fixed overflowing text

--- a/styles/dgammastudios.css
+++ b/styles/dgammastudios.css
@@ -68,8 +68,9 @@ p {
 }
 #about_text {
   min-width: 400px;
+  max-width: 100%;
   margin: 0 1em 2em 1em;
-  flex: 1 1 400px;  
+  flex: 1 1 400px;
   
 }
 #dgammalogo {
